# ddgo-pnp-controller

./: Cargo.toml  README.md  SDL_mappings.md
src/: controller.rs  main.rs  physical_controller.rs  state.rs  virtual_controller.rs
src/controller/: emulated.rs  physical.rs
src/controller/emulated/: dgoc44u.rs  generic.rs  slph00051.rs  sotp031201_p4b2b7.rs  sotp031201_p4b7.rs  sotp031201_p5b5.rs  sotp031201_p5b7.rs  tc5175290.rs  tcpp20003.rs  tcpp20004.rs  tcpp20009.rs  tcpp20011.rs  vok00106.rs  zkns001.rs
