[package]
name = "ddgo-pnp-controller"
version = "0.1.0"
edition = "2021"

[package.metadata.cross.target.arm-unknown-linux-musleabi]
pre-build = ["apt-get update && apt-get install -y python3"] 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evdev-rs = "0.6.1"
